# samatnext-bit

./: .gitignore  AGENTS.md  CLAIMS_AND_LIMITATIONS.md  EXPERIMENT_LOG.md  LICENSE  PAPER_OUTLINE.md  README.md  RELEASE_NOTES_ARXIV_DRAFT_V1.md  RELEASE_NOTES_MONO_FORWARD_SMOKE_V1.md  REPRODUCIBILITY.md  RESULTS_BASE3_TERNARY_v1.md  RESULTS_BASE3_TERNARY_v2_LUT.md  RESULTS_BASE3_TERNARY_v3_TILE_DOT.md  RESULTS_BF16_SOFTMAX_VS_GDN_PYTHON_512_v1.md  RESULTS_CHAINRULE_VS_MONO_24LAYER_v1.md  RESULTS_CUDA_NATIVE_v1.md  RESULTS_DENSE24_MONO_OPTIMIZED_MBPP_500STEP_v1.md  RESULTS_DENSE24_MONO_VRAM_OPTIMIZED_PYTHON_v1.md  RESULTS_DENSE313M_LOSS_RECOVERY_v1.md  RESULTS_DENSE313M_OPTIMIZED_FAIRNESS_500_v1.md  RESULTS_DENSE313M_PYTHON_DISTILL_1500_v1.md  RESULTS_DENSE313M_PYTHON_HF_MIX_1500_v1.md  RESULTS_DENSE313M_PYTHON_HF_MIX_QUALITY_1500_v1.md  RESULTS_DENSE4_VS_SPARSE4_24_v1.md  RESULTS_PACKED_TERNARY_v1.md  RESULTS_PRACTICAL_PYTHON_CODE_TRAINING_SMOKE_v1.md  RESULTS_REGULAR_TORCH_4LAYER_AUDIT_v1.md  RESULTS_SMOKE_24LAYER_SPEED_v1.md  RESULTS_SMOKE_ENGLISH_24LAYER_v1.md  RESULTS_SOFTMAX_VS_GDN_4ACTIVE_v1.md  RESULTS_SPEED_500K_v1.md  RESULTS_SUMMARY.md  RESULTS_VALIDATE_ENGLISH_24LAYER_FAIR_v1.md  RESULTS_VALIDATE_ENGLISH_24LAYER_FINALFAIR_v1.md  RESULTS_VALIDATE_ENGLISH_24LAYER_v1.md  config_redaction_test.yaml  pyproject.toml  requirements.txt
configs/: bf16_softmax_vs_gdn_python_512.yaml  bitnet_32x512.yaml  bitnet_32x768_smoke.yaml  bitnet_large.yaml  bitnet_tiny.yaml  chainrule_vs_mono_24layer.yaml  dense24_mono_optimized_mbpp_500step.yaml  dense313m_loss_recovery.yaml  (+18 more)
(+47 files in other folders)
