[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "samatnext-bit"
version = "0.1.0"
requires-python = ">=3.10"
license = "Apache-2.0"
dependencies = [
  "torch",
  "triton",
  "PyYAML",
  "pytest",
  "tokenizers",
  "datasets",
]

[tool.setuptools.packages.find]
where = ["src"]
