[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "samatnext-bit"
version = "0.1.0"
description = "Scheduled mono-forward-style training update benchmarks for decoder models."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "Samat Zharassov" },
]
dependencies = [
  "torch",
  "triton",
  "PyYAML",
  "pytest",
]

classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[tool.setuptools.packages.find]
where = ["src"]
